kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-web
  labels:
    role: myrole
    team: sre
    run: load-balancer-example
# specification
spec:
  containers:
    - name: db
      image: mysql
      ports:
        - name: mysql
          containerPort: 3306
          protocol: TCP
    - name: apache
      image: httpd:alpine
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
    - name: whoami
      image: jwilder/whoami
      ports:
        - name: who
          containerPort: 8000
          protocol: TCP
